# Dr_drone

./: .gitignore  README.md
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/avoidance/: .catkin  _setup_util.py
catkin_ws/logs/global_planner/: build.make.000.log.stderr
catkin_ws/logs/parallel_planner/: build.check.000.log.stderr  build.check.001.log.stderr  build.check.007.log.stderr  build.check.021.log.stderr  build.check.022.log.stderr  build.check.024.log.stderr  build.check.029.log.stderr  build.check.033.log.stderr  build.check.036.log.stderr  build.check.046.log.stderr  build.check.051.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr  build.make.003.log.stderr  build.make.008.log.stderr  build.make.011.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.024.log.stderr  build.make.026.log.stderr  build.make.040.log.stderr  build.make.041.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.048.log.stderr  build.make.049.log.stderr  build.make.050.log.stderr  build.make.051.log.stderr
catkin_ws/src/avoidance/parallel_planner/: CMakeLists.txt  nodelets.xml  package.xml  package2.xml
catkin_ws/src/avoidance/parallel_planner/cfg/: ParallelPlannerNode.cfg  PlannerConfig.cfg  pluginlists.yaml  px4_config.yaml
catkin_ws/src/avoidance/parallel_planner/cfg/cpp/parallel_planner/: PlannerConfigConfig.h
catkin_ws/src/avoidance/parallel_planner/docs/: PlannerConfigConfig.dox  PlannerConfigConfig.wikidoc
catkin_ws/src/avoidance/parallel_planner/include/parallel_planner/: parallel_planner.h  parallel_planner_node.h  parallel_planner_visualization.h  planner_functions.h  star_planner.h  waypoint_generator.h
catkin_ws/src/avoidance/parallel_planner/launch/: log_replay.launch  mavros.launch  parallel_planner.launch  parallel_planner_aero.launch  parallel_planner_aeroD415.launch  parallel_planner_depth-camera.launch  parallel_planner_multi_uav.launch  parallel_planner_sitl_3cam.launch  parallel_planner_stereo.launch  rs_depthcloud.launch  uav_system1.launch
catkin_ws/src/avoidance/parallel_planner/resource/: custom_rosconsole.conf  parallel_planner.rviz  parallel_planner2.rviz
catkin_ws/src/avoidance/parallel_planner/src/nodes/: dsm_node.cpp  kalman_filter_node.cpp  parallel_planner.cpp  parallel_planner_node.cpp  parallel_planner_node_class.cpp  parallel_planner_node_main.cpp  parallel_planner_visualization.cpp  planner_functions.cpp  star_planner.cpp  tree_node.cpp  vfh_node.cpp  waypoint_generator.cpp
catkin_ws/src/avoidance/parallel_planner/src/parallel_planner/cfg/: PlannerConfigConfig.py
catkin_ws/src/avoidance/parallel_planner/src/utils/: trajectory_simulator.cpp
catkin_ws/src/avoidance/parallel_planner/test/: test_local_planner_nodelet.cpp  test_planner_functions.cpp  test_planner_planner.cpp  test_star_planner.cpp  test_trajectory_simulator.cpp  test_waypoint_generator.cpp  valgrind_suppressions.sup
(+137 files in other folders)
